terragrunt/alb-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: echoserver
    namespace: dev
    annotations:
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/subnets: subnet-0b468050dee551095,subnet-042846182dcafdf39,subnet-080b9a3334171fab2
        alb.ingress.kubernetes.io/tags: Environment=dev,Team=DevOps,Temp=true,Name=Kirill
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test
              port:
                number: 80
